--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@ description: This is the index page and its description.
 			<div class="banner-slides">
 				<div class="banner" style= "background:url(/assets/img/banners/vorex-banner2-1920x750.jpg) center center no-repeat;">
 					<div class="mcontent">
-						<h3 class="banner-title">Change Your<span class="typed-wrap">&nbsp;<span class="typed"></span></span></h3>
-						<div class="banner-tagline">Better project insight, automated invoicing, and intuitive operational management to grow your business, improve your efficiency and help your customers excel.
+						<h3 class="banner-title editable">Change Your<span class="typed-wrap">&nbsp;<span class="typed"></span></span></h3>
+						<div class="banner-tagline editable">Better project insight, automated invoicing, and intuitive operational management to grow your business, improve your efficiency and help your customers excel.
 						</div>
-						<a class="banner-link btn" title="Request a Free Trial" href="#">Request a Free Trial</a>
+						<a class="banner-link btn editable" title="Request a Free Trial" href="#">Request a Free Trial</a>
 					</div>
 				</div>
 			</div>
@@ -24,10 +24,10 @@ description: This is the index page and its description.
 		<div class="home-cta">
 			<div class="mcontent">
 				<div class="home-cta-text-wrap">
-					<div class="home-cta-line-1">Free eBook</div>
-					<div class="home-cta-line-2">The Agency's Scale Problem</div>
+					<div class="home-cta-line-1 editable">Free eBook</div>
+					<div class="home-cta-line-2 editable">The Agency's Scale Problem</div>
 				</div>
-				<a class="home-cta-link" href="#">Download Now</a>
+				<a class="home-cta-link editable" href="#">Download Now</a>
 			</div>
 		</div>
 
@@ -37,15 +37,15 @@ description: This is the index page and its description.
 					<img alt="section image" src="/assets/img/labtop.jpg" />
 				</div>
 				<div class="col col-2 section-detail">
-					<span class="section-title">Technology that affects change in your business and your life</span>
-					<span class="section-copy">Vorex’s cloud-based business management platform helps you focus on strategy to grow your business instead of tactical operational execution that frustrates, complicates and clogs up your day. We provide all the tools, tricks and power of a platform to run your business, including project management, accounting, time-tracking, invoicing, billing, help desk, ticketing, CRM, professional services automation and more.</span><a class="section-link btn redborder" href="#">Learn More</a>
+					<span class="section-title editable">Technology that affects change in your business and your life</span>
+					<span class="section-copy editable">Vorex’s cloud-based business management platform helps you focus on strategy to grow your business instead of tactical operational execution that frustrates, complicates and clogs up your day. We provide all the tools, tricks and power of a platform to run your business, including project management, accounting, time-tracking, invoicing, billing, help desk, ticketing, CRM, professional services automation and more.</span><a class="section-link btn redborder editable" href="#">Learn More</a>
 				</div>
 			</div>
 		</div>
 		<div class="section section2 one-column" style="background:url('/assets/img/banners/home-banner-2.jpg') center center no-repeat;">
 			<div class="mcontent">
-				<span class="section-title">A Better Run Business <span class="italic">leads to</span>  a Better Quality of Life</span>
-				<span class="section-copy">Stay a step ahead of the competition with Vorex’s business management platform that provides a simplified snapshot of your day-to-day business operations and overall profitability.  The end result?  Knowing that your kids will be the last thing you put to bed each night, not work.</span><a class="section-link btn redborder" href="#">See How We Can Help</a>
+				<span class="section-title editable">A Better Run Business <span class="italic">leads to</span>  a Better Quality of Life</span>
+				<span class="section-copy editable">Stay a step ahead of the competition with Vorex’s business management platform that provides a simplified snapshot of your day-to-day business operations and overall profitability.  The end result?  Knowing that your kids will be the last thing you put to bed each night, not work.</span><a class="section-link btn redborder" href="#">See How We Can Help</a>
 			</div>
 		</div>
 		<div class="mcontent blog-section">
