--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ description: This is the index page and its description.
 	<div id="content" class="site-content">
 		<div id="primary" class="content-area front-page">
 			<div class="banner-slides">
-				<div class="banner" style= "background:url(/assets/img/banners/vorex-banner2-1920x750.jpg) center center no-repeat;">
+				<div class="banner" style= "background:url(/vorex/assets/img/banners/vorex-banner2-1920x750.jpg) center center no-repeat;">
 					<div class="mcontent">
 						<h3 class="banner-title editable">Change Your<span class="typed-wrap">&nbsp;<span class="typed"></span></span></h3>
 						<div class="banner-tagline editable">Better project insight, automated invoicing, and intuitive operational management to grow your business, improve your efficiency and help your customers excel.
@@ -34,7 +34,7 @@ description: This is the index page and its description.
 		<main id="main" class="site-main" role="main">
 			<div class="section section1 columns-right">
 				<div class="mcontent"><div class="col col-2 section-img">
-					<img alt="section image" src="/assets/img/labtop.jpg" />
+					<img alt="section image" src="/vorex/assets/img/labtop.jpg" />
 				</div>
 				<div class="col col-2 section-detail">
 					<span class="section-title editable">Technology that affects change in your business and your life</span>
@@ -42,7 +42,7 @@ description: This is the index page and its description.
 				</div>
 			</div>
 		</div>
-		<div class="section section2 one-column" style="background:url('/assets/img/banners/home-banner-2.jpg') center center no-repeat;">
+		<div class="section section2 one-column" style="background:url('/vorex/assets/img/banners/home-banner-2.jpg') center center no-repeat;">
 			<div class="mcontent">
 				<span class="section-title editable">A Better Run Business <span class="italic">leads to</span>  a Better Quality of Life</span>
 				<span class="section-copy editable">Stay a step ahead of the competition with Vorex’s business management platform that provides a simplified snapshot of your day-to-day business operations and overall profitability.  The end result?  Knowing that your kids will be the last thing you put to bed each night, not work.</span><a class="section-link btn redborder" href="#">See How We Can Help</a>
@@ -52,7 +52,7 @@ description: This is the index page and its description.
 			<h3 class="section-title">From The Blog</h3>
 			<div class="row">
 				<div class="col col-2 post-thumb">
-					<img width="568" height="319" src="/assets/img/blogs-resources/msp.psa_.jpg" class="attachment-home-feed wp-post-image" alt="" />
+					<img width="568" height="319" src="/vorex/assets/img/blogs-resources/msp.psa_.jpg" class="attachment-home-feed wp-post-image" alt="" />
 				</div>
 				<div class="col col-2 post-detail">
 					<h2><a href="#">Why MSPs Can&#8217;t Afford Long PSA Implementations</a></h2>
@@ -81,7 +81,7 @@ description: This is the index page and its description.
 						</div>
 						<span class="author-info">Sally Kindsfater<span class="company"> of <span>Total Stream Systems</span></span>
 						</span>
-						<span class="company-logo"><img alt="company logo" src="/assets/img/logos-favicons/logo-total-stream.jpg" /></span>
+						<span class="company-logo"><img alt="company logo" src="/vorex/assets/img/logos-favicons/logo-total-stream.jpg" /></span>
 					</div>
 				</div>
 			</div>
