--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@ description: This is the index page and its description.
 ---
 
 <body>
+<!--New comment here-->
 <div id="page" class="hfeed site">
-
 	<div id="content" class="site-content">
 		<div id="primary" class="content-area front-page">
 			<div class="banner-slides">
