--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ description: This is the index page and its description.
 					<div class="home-cta-line-1 editable">Free eBook</div>
 					<div class="home-cta-line-2 editable">The Agency's Scale Problem</div>
 				</div>
-				<a class="home-cta-link editable" href="#">Download Now</a>
+				<a class="home-cta-link editable" href="#">Get It Today</a>
 			</div>
 		</div>
 
