Updated 'index.html' via CloudCannon

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ description: This is the index page and its description.
 						<h3 class="banner-title editable">This is editable on the hero<span class="typed-wrap">&nbsp;<span class="typed"></span></span></h3>
 						<div class="banner-tagline editable">Better project insight, automated invoicing, and intuitive operational management to grow your business, improve your efficiency and help your customers excel.
 						</div>
-						<a class="banner-link btn editable" title="Request a Free Trial" href="#">Request a Free Trial</a>
+						<a class="banner-link btn editable" title="Request a Free Trial" href="#">Free Trial</a>
 					</div>
 				</div>
 			</div>
